--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -3245,6 +3245,7 @@ ol {
 .featured-categories .single-category {
   padding: 40px;
   margin-top: 30px;
+  margin-bottom: 40px;
   border: 2px solid #f0f0f0;
   position: relative;
   background: #fff;
