--- a/public/frontend/assets/css/rtl.css
+++ b/public/frontend/assets/css/rtl.css
@@ -34,12 +34,22 @@ Index Of css
 ========================================*/
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
 
+@font-face {
+  font-family: "XBRiyaz";
+  src: url(../fonts/Almarai-Regular.ttf);
+  src: url(../fonts/Almarai-Bold.ttf);
+  src: url(../fonts/Almarai-Regular.ttf);
+  src: url(../fonts/Almarai-Regular.ttf);
+  
+  }
+
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Manrope", sans-serif;
+  direction: rtl;
+  font-family: "XBRiyaz", sans-serif;
   font-weight: 500;
   font-style: normal;
   color: #888;
@@ -3298,6 +3308,7 @@ ol {
 .featured-categories .single-category {
   padding: 40px;
   margin-top: 30px;
+  margin-bottom: 40px;
   border: 2px solid #f0f0f0;
   position: relative;
   background: #fff;
