--- a/public/backend/assets/css/ltr.css
+++ b/public/backend/assets/css/ltr.css
@@ -22378,7 +22378,7 @@ textarea.form-control {
   white-space: nowrap; }
 
 .pagination .page-item .page-link {
-  padding: 1.0rem 1.3rem;
+  /* padding: 1.0rem 1.3rem; */
   color: #626262; }
 
 .pagination .page-item.active .page-link {
