--- a/public/frontend/assets/css/rtl.css
+++ b/public/frontend/assets/css/rtl.css
@@ -934,7 +934,7 @@ ol {
 /* Bread Crumbs */
 .breadcrumbs {
   position: relative;
-  padding: 30px 0;
+  /* padding: 30px 0; */
   z-index: 2;
   text-align: right;
   background-color: #fff;
@@ -950,7 +950,7 @@ ol {
 
 @media (max-width: 767px) {
   .breadcrumbs {
-    padding: 30px;
+    /* padding: 30px; */
   }
 }
 
@@ -3020,7 +3020,8 @@ ol {
 }
 
 .hero-area .hero-slider .single-slider .content {
-  padding: 20px 50px 20px 365px;
+  direction: rtl;
+  padding: 20px 25px 20px 25px;
   position: absolute;
   right: 0;
   top: 50%;
@@ -5103,7 +5104,7 @@ blockquote span {
   text-align: center;
   font-size: 20px;
   font-weight: 500;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px),
