--- a/public/frontend/assets/css/custom1.css
+++ b/public/frontend/assets/css/custom1.css
@@ -116,7 +116,7 @@
       
       .custom-navbar-right {
           display: flex;
-          flex: 0 0 17%;
+          /* flex: 0 0 17%; */
           align-items: center;
           justify-content: flex-end;
           column-gap: 1.5rem;
