--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -1,15 +1,19 @@
 .admin-header .nav-link .notification-status {
-          position: absolute;
-          top: 10px;
-          right: 20%;
-          width: 10px;
-          min-width: 5px;
-          height: 10px;
-          min-height: 5px;
-          padding: 0;
-          border-radius: 100%;
-          line-height: 5px;
-}
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 10px;
+  right: 18%;
+  width: 12px;
+  min-width: 5px;
+  height: 12px;
+  min-height: 5px;
+  padding: 0;
+  border-radius: 100%;
+  line-height: 5px;
+  border-radius: 20px;
+ }
 
 table.dataTable thead>tr>th.sorting_asc,
 table.dataTable thead>tr>th.sorting_desc,
@@ -133,3 +137,5 @@ table.dataTable.display tbody tr:first-child td {
           opacity: 0.65;
         }
         
+
+      
