--- a/public/frontend/assets/css/rtl.css
+++ b/public/frontend/assets/css/rtl.css
@@ -934,7 +934,7 @@ ol {
 /* Bread Crumbs */
 .breadcrumbs {
   position: relative;
-  /* padding: 30px 0; */
+  padding: 30px 0;
   z-index: 2;
   text-align: right;
   background-color: #fff;
