fix some issues 26/9/2024

--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -139,3 +139,10 @@ table.dataTable.display tbody tr:first-child td {
         
 
       
+        .config-title{
+
+          direction: ltr;
+          font-size:18px;
+          text-align: left;
+
+        }
